# agentic-ai

./: .env.example  pyproject.toml
langchain/: 1-langchain-intro.ipynb  2-model_integration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structured_output.ipynb  6-middleware.ipynb
